--- a/styles/global.css
+++ b/styles/global.css
@@ -1,29 +1,45 @@
 body {
-    font-family: 'Marvel', Courier, monospace;
+    font-family: 'Marvel', 'Courier New', Courier, monospace;
     font-size: 1rem;
     font-weight: 500;
     line-height: 1.1;
   }
   
   h1 {
-    font-family: 'Ojuju','Georgia';
-    font-size: 2.5rem;
+    font-family: 'Ojuju', Georgia, 'Times New Roman', Times, serif;
+    font-size: 6.0rem;
     font-weight: 600;
   }
   
   @font-face {
     font-family: 'Ojuju';
-    src: url(../Fonts/Marvel\,Ojuju/Ojuju);
+    src: url(../Fonts/Ojuju/Ojuju-VariableFont_wght.ttf);
   }
 
   @font-face {
     font-family: 'Marvel';
-    src: url(../Fonts/Marvel\,Ojuju/Marvel);
+    src: url(../Fonts/Marvel/Marvel-Regular.ttf);
   }
 
-  h2,
-  h3,
-  h4,
+  h2 {
+    font-family: 'Ojuju',Georgia, 'Times New Roman', Times, serif;
+    font-size: 3.5rem;
+    font-weight: 600;
+  }
+
+  h3 {
+    font-family: 'Marvel','Courier New', Courier, monospace;
+    font-size: 1.75rem;
+    font-weight: 500;
+    line-height: 1.1;
+  }
+
+  h4 {
+    font-family: 'Ojuju', Georgia, 'Times New Roman', Times, serif;
+    font-size: 2.0rem;
+    font-weight: 600;
+  }
+
   h5,
   h6,
   p {
@@ -31,24 +47,14 @@ body {
     margin: 1rem 0;
   }
   
-  h2 {
-    font-size: 1.5rem;
-    font-weight: 550;
-  }
   
-  h3 {
-    font-size: 1.25rem;
-    font-weight: 200;
-    text-transform: uppercase;
-  }
-  
-  h4, h5, h6 {
+  h5, h6 {
     font-size: 1.25rem;
     font-weight: 600;
   }
   
   p {
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 500;
     line-height: 1.5;
   }
@@ -95,68 +101,35 @@ body {
     background-image: url(../Assets/Calgary_Skyline_Hero.jpg); opacity: .80;
     background-position: center;
     background-size:contain;
-    color: #060606;
-    height: 90vh;
+    color: #0f0f0f;
+    height: 75vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: normal;
     flex-direction: column;
   }
   
   .content-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: #f6ef65;
+    background-color: #ff440683; 
     height: 600px;
     text-align: center;
     align-items: center;
   }
   
-  .accordion-container {
-    background-color: #126900;
-    color: #fff;
-    height: 200px;
-  }
+  
   
   .footer-container {
     display: flex;
-    background-color: #aad2f7;
+    background-color: #2b97fb64;
     width: 100%;
     height: 300px;
     position: relative;
     flex-direction: row;
     flex-wrap: wrap;
   }
-  .accordion {
-    background-color: #4d3202;
-    color: #dbb0f5;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: center;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-  }
-  
-  .active, .accordion:hover {
-    background-color: #025383;
-  }
-  
-  .accordion:after {
-    content: '\1F862'; 
-    color: #dbb0f5;
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
-  }
-  
-  .active:after {
-    content: "\1F863";
-    color: #dbb0f5
-  }
-  
+    
   .panel {
     padding: 0 18px;
     background-color: rgb(0, 0, 0);
