--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,9 @@ body {
     font-family: 'Ojuju', Georgia, 'Times New Roman', Times, serif;
     font-size: 6.0rem;
     font-weight: 600;
+    text-align: center;
+    margin-block-start: .50px;
+    margin-block-end: .50px
   }
   
   @font-face {
@@ -69,7 +72,7 @@ body {
   }
 
   /* Sections */
-.container {
+  .container {
     margin: 3rem auto;
     max-width: 75rem;
     padding: 3rem 1.5rem;
@@ -101,9 +104,9 @@ body {
   }
   
   .hero-container {
-    background-image: url(../Assets/Calgary_Skyline_Hero.jpg); opacity: .80;
+    background-image: url(../Assets/Hero-Calgary-Skyline.JPG);
     background-position: center;
-    background-size:contain;
+    background-size: contain;
     color: #0f0f0f;
     height: 75vh;
     display: flex;
@@ -116,7 +119,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: #ff440683; 
-    height: 600px;
+    height: auto;
     text-align: center;
     align-items: center;
   }
@@ -130,14 +133,6 @@ body {
     position: relative;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-    
-  .panel {
-    padding: 0 18px;
-    background-color: rgb(0, 0, 0);
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
   }
   
   .content-image {
@@ -154,4 +149,36 @@ body {
     min-width: 25%;
   }
 
+  /* Navigation Bar */
+  .site-nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #0f0f0f;
+  }
+  .site-nav li {
+    float:left;
+  }
+  .site-nav li a {
+    display: block;
+    padding: 8px;
+    font-size: x-large;
+    color: #fff;
+    text-decoration: none;
+  } 
+  .current {
+    background-color: rgb(255, 0, 43);
+  }
   
+  /* Video */
+  .video {
+    height: 300px;
+    max-width: auto;
+  }
+  .video-container {
+    display: flex;
+    justify-content: center;
+    background-color: #ff440683; 
+    height: auto;
+  }
