--- a/styles/AccordianStyle.css
+++ b/styles/AccordianStyle.css
@@ -5,7 +5,7 @@
   }
   .accordion {
     background-color: #FFE17B;
-    color: #FD8D14;
+    color: #000000;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -17,12 +17,12 @@
   }
   
   .active, .accordion:hover {
-    background-color: #025383;
+    background-color: #8babf1;
   }
   
   .accordion:after {
     content: '\1F862'; 
-    color: #FD8D14;
+    color: #030303;
     font-weight: bold;
     float: right;
     margin-left: 5px;
@@ -30,7 +30,7 @@
   
   .active:after {
     content: "\1F863";
-    color: #FD8D14;
+    color: #070707;
   }
 
   .panel {
