--- a/styles/global.css
+++ b/styles/global.css
@@ -24,13 +24,13 @@ body {
     src: url(../Fonts/Marvel/Marvel-Regular.ttf);
   }
 
-  h2 {
+  h3 {
     font-family: 'Ojuju',Georgia, 'Times New Roman', Times, serif;
     font-size: 3.5rem;
     font-weight: 600;
   }
 
-  h3 {
+  h2 {
     font-family: 'Marvel','Courier New', Courier, monospace;
     font-size: 1.75rem;
     font-weight: 500;
@@ -39,7 +39,7 @@ body {
 
   h4 {
     font-family: 'Ojuju', Georgia, 'Times New Roman', Times, serif;
-    font-size: 2.0rem;
+    font-size: 2.5rem;
     font-weight: 600;
   }
 
@@ -60,7 +60,7 @@ body {
   }
   
   p {
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     font-weight: 500;
     line-height: 1.5;
   }
@@ -118,7 +118,7 @@ body {
   .content-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: #ff440683; 
+    background-color: #faaf90; 
     height: auto;
     text-align: center;
     align-items: center;
@@ -127,7 +127,7 @@ body {
 
   .footer-container {
     display: flex;
-    background-color: #2b97fb64;
+    background-color: #b3c7f7;
     width: 100%;
     height: 300px;
     position: relative;
@@ -173,12 +173,14 @@ body {
   
   /* Video */
   .video {
-    height: 300px;
+
+    width: 560px;
+    height: 315px;
     max-width: auto;
   }
   .video-container {
     display: flex;
     justify-content: center;
-    background-color: #ff440683; 
+    background-color: #ffaf90; 
     height: auto;
   }
