--- a/styles/Events.css
+++ b/styles/Events.css
@@ -66,3 +66,9 @@
     font-size: 1.0 rem;
     margin: 0;
   }
+
+  h3 {
+    font-family: 'Ojuju',Georgia, 'Times New Roman', Times, serif;
+    font-size: 2.5rem;
+    font-weight: 600;
+  }
